; ModuleID = '/home/carl/AnghaBench/reactos/modules/rosapps/templates/mdi/extr_childwnd.c_OnPaint.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rosapps/templates/mdi/extr_childwnd.c_OnPaint.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32 }

@BLACK_BRUSH = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32, i32*)* @OnPaint to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @OnPaint(i32 %0, i32* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32*, align 8
  %5 = alloca %struct.TYPE_4__, align 4
  %6 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  store i32* %1, i32** %4, align 8
  %7 = load i32, i32* %3, align 4
  %8 = call i32 @GetClientRect(i32 %7, i32* %6)
  %9 = load i32, i32* %3, align 4
  %10 = call i32 @BeginPaint(i32 %9, %struct.TYPE_4__* %5)
  %11 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %5, i32 0, i32 0
  %12 = load i32, i32* %11, align 4
  %13 = load i32, i32* @BLACK_BRUSH, align 4
  %14 = call i32 @GetStockObject(i32 %13)
  %15 = call i32 @FillRect(i32 %12, i32* %6, i32 %14)
  %16 = load i32, i32* %3, align 4
  %17 = call i32 @EndPaint(i32 %16, %struct.TYPE_4__* %5)
  ret void
}

declare dso_local i32 @GetClientRect(i32, i32*) #1

declare dso_local i32 @BeginPaint(i32, %struct.TYPE_4__*) #1

declare dso_local i32 @FillRect(i32, i32*, i32) #1

declare dso_local i32 @GetStockObject(i32) #1

declare dso_local i32 @EndPaint(i32, %struct.TYPE_4__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
